--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width">
   <title>Service worker shim</title>
   <link rel="stylesheet" href="style.css">
-  <script defer src="navigator_connect_shim_svr.js"></script>
   <script defer src="app.js"></script>
+  <!--script defer src="navigator_connect_shim_svr.js"></script-->
 </head>
 <body>
   <section>
