--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <section>
     <h1>SHIM test</h1>
     <p><button id="regBto">Register</button></p>
-    <p><button id="unregBto">Unregister</button></p>
+   <!-- <p><button id="unregBto">Unregister</button></p> -->
   </section>
 </body>
 </html>
