--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <title>Service worker shim</title>
   <link rel="stylesheet" href="style.css">
   <script src="app.js"></script>
-  <!--script defer src="navigator_connect_shim_svr.js"></script-->
+  <script defer src="navigator_connect_shim_svr.js"></script>
 </head>
 <body>
   <section>
     <h1>SHIM test</h1>
     <p><button id="regBto">Register</button></p>
-   <!-- <p><button id="unregBto">Unregister</button></p> -->
+    <p><button id="unregBto">Unregister</button></p>
   </section>
 </body>
 </html>
