--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width">
   <title>Service worker shim</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="shim/navigator_connect_shim_svr.js"></script>
-  <script src="app.js"></script>
+  <meta name="description" content="Service Workers with a shim">
+
+  <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" href="style/style.css">
+
+  <script src="js/app.js"></script>
 </head>
 <body>
-  <section>
+  <section class="panel">
     <h1>SHIM test</h1>
-    <p><button id="regBto">Register</button></p>
-    <p><button id="sendMsgBto">Send Message</button></p>
-    <p><button id="unregBto">Unregister</button></p>
+    <button id="regBto" class="menu-option">Register</button>
+    <button id="sendMsgBto" class="menu-option">Send Message</button>
+    <button id="unregBto" class="menu-option">Unregister</button>
   </section>
 </body>
 </html>
