--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="style/style.css">
 
+  <script src="shim/navigator_connect_shim_svr.js"></script>
   <script src="js/app.js"></script>
 </head>
 <body>
