--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <button id="regBto" class="menu-option">Register</button>
     <button id="sendMsgBto" class="menu-option">Send Message</button>
     <button id="unregBto" class="menu-option">Unregister</button>
+    <button id="connMsgMto" class="menu-option">Connection</button>
   </section>
 </body>
 </html>
