--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="style/style.css">
 
+  <!-- ADDED FOR SHIM -->
   <script src="shim/navigator_connect_shim_svr.js"></script>
+  <!-- END ADDED FOR SHIM -->
   <script src="js/app.js"></script>
 </head>
 <body>
@@ -17,7 +19,6 @@
     <button id="regBto" class="menu-option">Register</button>
     <button id="sendMsgBto" class="menu-option">Send Message</button>
     <button id="unregBto" class="menu-option">Unregister</button>
-    <button id="connMsgMto" class="menu-option">Connection</button>
   </section>
 </body>
 </html>
