--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <!-- ADDED FOR SHIM -->
   <script src="shim/navigator_connect_shim_svr.js"></script>
   <!-- END ADDED FOR SHIM -->
-  <script src="js/app.js"></script>
+  <script defer src="js/service.js"></script>
+  <script defer src="js/app.js"></script>
 </head>
 <body>
   <section class="panel">
